# python-basics-labs

./: README.md
employee-payroll-tracker/: .gitignore  README.md  app.py  main.py  menu_handlers.py  pyproject.toml
employee-payroll-tracker/src/models/: employee.py
employee-payroll-tracker/src/utils/: helpers.py  report_generator.py  salary_calculator.py
library-inventory/: .gitignore  README.md  app.py  main.py  menu_handlers.py  pyproject.toml
library-inventory/src/models/: library_resource.py
library-inventory/src/utils/: file_io.py  helpers.py  reports.py  search.py
personal-finance-tracker/: .gitignore  README.md  app.py  main.py  menu_handlers.py  pyproject.toml
personal-finance-tracker/src/models/: account.py  savings_goal.py  transaction.py
personal-finance-tracker/src/reports/: report_generator.py
personal-finance-tracker/src/utils/: helpers.py  storage.py
personal-finance-tracker/tests/: test_finance.py
student-course-management/: .gitignore  README.md  app.py  main.py  menu_handlers.py  pyproject.toml
student-course-management/src/data/: init.py
student-course-management/src/models/: course.py  enrollment.py  student.py
student-course-management/src/reports/: report_generator.py
student-course-management/src/utils/: helpers.py
student-course-management/tests/: test_student.py
vehicle-rental-system/: .gitignore  README.md  app.py  demo_features.py  main.py  menu_handlers.py  pyproject.toml
vehicle-rental-system/src/models/: rental.py  vehicle.py
vehicle-rental-system/tests/: test_vehicle.py
(+2 files in other folders)
