[project]
name = "student-course-management"
version = "0.1.0"
description = "A Student Course Management System"
authors = [
    {name = "EmmanuelSHYIRAMBERE",email = "emashyirambere1@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "tabulate (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
